@@ -16,11 +16,12 @@
 #define BUFSZ				1024
 #define ENV_BLK_SIZE			0x1000
 
-#define RALINK_NVRAM_IOCTL_GET		0x01
-#define RALINK_NVRAM_IOCTL_GETALL	0x02
-#define RALINK_NVRAM_IOCTL_SET		0x03
-#define RALINK_NVRAM_IOCTL_COMMIT	0x04
-#define RALINK_NVRAM_IOCTL_CLEAR	0x05
+#define RALINK_NVRAM_IOCTL		0x1000
+#define RALINK_NVRAM_IOCTL_GET		RALINK_NVRAM_IOCTL + 0x01
+#define RALINK_NVRAM_IOCTL_GETALL	RALINK_NVRAM_IOCTL + 0x02
+#define RALINK_NVRAM_IOCTL_SET		RALINK_NVRAM_IOCTL + 0x03
+#define RALINK_NVRAM_IOCTL_COMMIT	RALINK_NVRAM_IOCTL + 0x04
+#define RALINK_NVRAM_IOCTL_CLEAR	RALINK_NVRAM_IOCTL + 0x05
 
 #define FREE(x) do { if (x != NULL) {free(x); x=NULL;} } while(0)
 
